src/objects/Datatable__c.object
<CustomObject>
    <fields>
        <fullName>ActionLabel__c</fullName>
        <label>Action Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipName>ListViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Navigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Navigation</label>
        <referenceTo>Navigation__c</referenceTo>
        <relationshipName>LisViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NoRecordsMessage__c</fullName>
        <label>No Records Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NumberOfColumns__c</fullName>
        <label>Number of Columns</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ObjectApiName__c</fullName>
        <label>Object Api Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderBy__c</fullName>
        <label>Order by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagingType__c</fullName>
        <label>Paging Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bottom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordsPerPage__c</fullName>
        <label>Records Per Page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhereCondition__c</fullName>
        <label>Where Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Datatable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Datatable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Datatables</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Clustering__c</fullName>
        <label>Clustering</label>
    </sharingReasons>
</CustomObject>